experiment with controls project

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /MyFirstConsoleApp/.vs/MyFirstConsoleApp/v16/.suo
+/ExperimentWithControls/.vs/ExperimentWithControls/v16/.suo
