random card proj

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 
 /MyFirstConsoleApp/.vs/MyFirstConsoleApp/v16/.suo
 /ExperimentWithControls/.vs/ExperimentWithControls/v16/.suo
+/PickRandomCards/.vs/PickRandomCards/v16/.suo
