paint ball gun app

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /MyFirstConsoleApp/.vs/MyFirstConsoleApp/v16/.suo
 /ExperimentWithControls/.vs/ExperimentWithControls/v16/.suo
 /PickRandomCards/.vs/PickRandomCards/v16/.suo
+/ConsoleApp1/.vs/ConsoleApp1/v16/.suo
+/ConsoleApp1/ConsoleApp1.sln
